fixed spacing at top

--- a/stylesheets/shaman.less
+++ b/stylesheets/shaman.less
@@ -5,7 +5,7 @@ body {
   text-align:center;
 }
 
-header { margin-bottom: 2rem; }
+header { margin-bottom: 2rem; margin-top: 1rem; }
 
 #logo { margin-bottom: 2rem; }
 
